# Buoyancy-simulation-in-ROS-gazebo

./: CMakeLists.txt  README.md  package.xml
config/: myrobot_control.yaml
launch/: robot.launch
src/: BuoyancyPlugin1.cc  BuoyancyPlugin1.hh  control.py
urdf/: drag.urdf
world/: empty_world.world
